Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4858

Global session ticket key block leaks.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.1.0
    • SSL
    • None

    Description

      From source inspection, ``global_default_keyblock`` is always assigned so it will leak on configuration reload.

      Have not reproduced this since I wasn't able to get SSL config reload to work

      Attachments

        Issue Links

          Activity

            People

              persiaAziz Syeda Persia Aziz
              jamespeach James Peach
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 4h 40m
                  4h 40m