TS-4858: fix memory leak problem of global_default_keyblock